# Rust-Book

./: readme.md
concurrency/src/: main.rs
encoding/: Cargo.toml
encoding/src/: main.rs
enumeration/: Cargo.toml
enumeration/src/: main.rs
error_handling/src/: main.rs
functional-concepts/: Cargo.toml
functional-concepts/src/: main.rs
functions+control flow/: Cargo.toml
functions+control flow/src/: main.rs
generic-lifetime/: Cargo.toml
generic-lifetime/src/: main.rs
guessing-game/src/: main.rs
matching/src/: main.rs
minigrep/: README.md
minigrep/src/: lib.rs  main.rs
oop-projects/blog/src/: lib.rs
oop-projects/gui-outline/: Cargo.toml
oop-projects/gui-outline/src/: lib.rs
oop-projects/gui-outline/tests/: integration_tests.rs
oop-projects/oop-concepts/: Cargo.toml
oop-projects/oop-concepts/src/: lib.rs
ownership/src/: main.rs
projects/variables/src/: main.rs
rand-vec/: Cargo.toml
rand-vec/src/: lib.rs
rand_vec/src/: lib.rs
rectangles/src/: main.rs
smart-pointers/src/: lib.rs  main.rs
structures/src/: main.rs
tests/src/: lib.rs
tests/tests/: integration_test.rs
tests/tests/common/: mod.rs
