[package]
name = "rand_vec"
version = "0.1.1"
edition = "2021"
description = "Debugging tool for producing random arrays"
license = "This code is illegal to use"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-traits = "0.2.18"
